<resources>
    <string name="app_name">RSS-Feed</string>
    <string name="copyright" translatable="false">©2023 Niilo Poutanen</string>

    <string name="feed_header">Feed</string>
    <string name="settings_header">Settings</string>
    <string name="feedsettings_header">Feed customization</string>
    <string name="content_header">Content</string>

    <string name="add">Add</string>
    <string name="continua">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="goback">Return</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="sharepost">Share post</string>

    <string name="addsource">Add source</string>
    <string name="updatesource">Update source</string>
    <string name="sourceremoved">Source removed</string>

    <string name="feed_name">Feed name</string>
    <string name="feed_name_autofill">Optional: Leave name empty for autofill</string>
    <string name="feed_url">Feed url</string>

    <string name="nointernet">No internet connection available.</string>
    <string name="nosources">No sources added.</string>

    <plurals name="minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <string name="justnow">Just now</string>
    <string name="imagefrom">Image from</string>
    <string name="imagesaved">Image saved to gallery</string>
    <string name="nowriteaccess">You have not granted write permissions to the app.</string>

    <string name="settings_theme">Theme</string>
    <string name="settings_theme_additional">The theme changes when restarting the app for the next time.</string>
    <string name="settings_feedcardstyle">Feed card style</string>
    <string name="accentcolor">Accent color</string>
    <string name="settings_font">Font used in articles</string>
    <string name="settings_launchwindow">Launch window</string>
    <string name="settings_launchwindow_additional">The selected window opens when starting the app.</string>
    <string name="haptics">Haptics</string>

    <string name="view_in_browser">View in browser</string>
    <string name="open_articles_in_browser">Open articles in browser</string>
    <string name="articles_fullscreen">View articles in fullscreen</string>
    <string name="cache_images">Cache images to disk</string>


    <string name="settingsheader_feed">Feed</string>
    <string name="settingsheader_colors">Colors</string>
    <string name="settingsheader_functionality">Functionality</string>
    <string name="settingsheader_article">Article</string>

    <string name="author_visible">Author visible</string>
    <string name="title_visible">Title visible</string>
    <string name="description_visible">Description visible</string>
    <string name="date_visible">Date visible</string>
    <string name="date_format">Date format</string>

    <string-array name="theme_modes">
        <item>Light</item>
        <item>Dark</item>
        <item>Follow system</item>
    </string-array>
    <string-array name="fonts">
        <item>Inter</item>
        <item>Roboto Serif</item>
        <item>Roboto Mono</item>
        <item>Poppins</item>
    </string-array>
    <string-array name="launch_windows">
        <item>Settings</item>
        <item>Feed</item>
        <item>Content</item>
        <item>Discover</item>
    </string-array>
    <string-array name="date_modes">
        <item>Long</item>
        <item>Short</item>
        <item>Time since</item>
        <item>Time only</item>
    </string-array>

    <string name="whatsnew">What\'s new in</string>

    <string name="feature1">Updated Discover page</string>
    <string name="feature1desc">New recommended section with tested feeds, and cleaner user interface.</string>

    <string name="feature2">Post categories now visible in article reader</string>
    <string name="feature2desc">If the publisher provides info about the post they write, such as: category=news, it is now visible when you read the article.</string>

    <string name="feature3">App stability</string>
    <string name="feature3desc">Enhanced app stability, less crashes</string>

    <string name="error_url">Error reading from url.</string>
    <string name="error_host">No internet connection or bad host url.</string>
    <string name="error_toomanyrequests">Too many requests.</string>


    <string name="sendmail">Send email</string>
    <string name="noemailfound">No email app was found. Send feedback to niilo.poutanen@gmail.com</string>
    <string name="emailquide">Write your feedback here. Leave the app and android version info to the message.</string>
    <string name="themechange_desc">Changes to the app theme will be visible when opening the app for the next time</string>
    <string name="discover_header">Discover</string>
    <string name="categories">Categories</string>
    <string name="results">Results</string>
    <string name="search">Search</string>
    <string name="sourceadded">Source added.</string>
    <string name="sourcealreadyadded">Source already added.</string>
    <string name="nointernetmsg">Feed can\'t be loaded. Connect to internet and try again.</string>
    <string name="nosourcesmsg">You have not added any sources to your feed yet. Go to the content- or discover-tab to add some.</string>
    <string name="toomanyrequestsmsg">You have sent too many requests to %s. Wait for a while and try again.</string>
    <string name="tryagain">Try again</string>
    <string name="donot_show_again">Do not show again</string>
    <string name="invalidfeed">The RSS Feed url is invalid.</string>
    <string name="invalidfeedmsg">The publisher\'s RSS feed may be out of date, or the url may have changed. The feed could not be opened.</string>
    <string name="settings_fontsize">Font size</string>
    <string name="show_in_feed">Show in feed</string>
    <string name="animate_clicks">Animate clicked elements</string>
    <string name="article_show_controls">Show bottom controls</string>
    <string name="article_focusmode">Toggle focus mode</string>
    <string name="debug_tools">Debug tools</string>
    <string name="article_open_with_url">Open ArticleView with URL</string>
    <string name="debug_terminate">Terminate app process</string>
    <string name="error_notsupported">The post you tried to open is invalid and not working with this app. Open it in your browser.</string>
    <string name="article_show_categories">Show post categories</string>
    <string name="update">Update</string>
    <string name="post_no_url">Unable to open article. This post has no URL attached to it.</string>
    <string name="error_adding_source">Error with adding source. Please try again.</string>
    <string name="tooltip_post_no_article">This post does not have a article, only the summary.</string>
    <string name="error_invalid_url">The URL you provided is not valid.</string>
    <string name="error_name_not_found">Autofill for the source name did not complete. Provide it manually.</string>
    <string name="error_empty_url">URL cannot be empty.</string>
</resources>