
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/discover_nestedscrollview"
    tools:context=".fragments.DiscoverFragment">

    <LinearLayout
        android:id="@+id/discover_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_header"
                android:textColor="@color/textPrimary"
                android:textSize="40sp"
                app:fontFamily="@font/inter_semibold" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/discover_search"
            android:transitionName="search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:background="@drawable/element_background"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:layout_marginBottom="10dp">
            <View
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:background="@drawable/icon_search"
                android:backgroundTint="@color/textSecondary"
                android:layout_marginRight="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textSize="16sp"
                android:textColor="@color/textSecondary"/>
        </LinearLayout>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/inter_medium"
            android:layout_marginBottom="5dp"
            android:textColor="@color/textSecondary"
            android:text="@string/categories"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/discover_categories_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:nestedScrollingEnabled="false"
            android:layoutAnimation="@anim/layout_animation"
            android:orientation="horizontal"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/inter_medium"
            android:textColor="@color/textSecondary"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:text="@string/results"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:animateLayoutChanges="true">
            <ProgressBar
                android:id="@+id/discover_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="?attr/colorAccent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:visibility="gone"/>
            <androidx.recyclerview.widget.RecyclerView
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/discover_results_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>